# fsr/examples/wave_react_ts/app/schemas/inputs.ts
@@ -2,6 +2,15 @@ export interface NameInput {
   name: string;
 }
 
+export interface PlayInput {
+  wave: string;
+  cell: bigint;
+}
+
+export interface ResetInput {
+  wave: string;
+}
+
 export interface BlipInput {
   wave: string;
   parent: string;
